Fix wrong height of donation-platforms

--- a/styles/base.css
+++ b/styles/base.css
@@ -95,6 +95,9 @@ header #buttons {
 
 .donation-platform {
   display: inline-block;
+}
+
+.donation-platform picture,img {
   height: 60px;
 }
 
